# mlta

./: .gitignore  LICENSE  Makefile  README.md  TODO  build-llvm.sh  irgen.sh
IRDumper/: .gitignore  Makefile
IRDumper/src/: CMakeLists.txt
IRDumper/src/lib/: CMakeLists.txt  IRDumper.cpp  IRDumper.h
InstrumentPTW/: InstrumentPTW.cpp  InstrumentPTW.h  Makefile
docs/: review-kallgraph.md
src/: CMakeLists.txt
src/lib/: Analyzer.cc  Analyzer.h  CMakeLists.txt  CallGraph.cc  CallGraph.h  Common.cc  Common.h  Config.cc  Config.h  MLTA.cc  MLTA.h
